--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,27 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "serve": "node rebuni.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon rebuni.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@workos-inc/node": "^6.0.3",
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "date-fns": "^3.3.1",
+        "dotenv": "^16.4.5",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "fns": "^1.0.0",
         "mongodb": "^6.4.0",
-        "mongoose": "^8.1.2"
+        "mongoose": "^8.1.2",
+        "mongoose-sequence": "^6.0.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
-        "nodemon": "^3.0.3"
+        "nodemon": "^3.1.0"
     }
 }
